# open.brain.run

./: .gitignore  README.md  model_scratch.ipynb  pyproject.toml  scratch.ipynb  scratch.py  setup.cfg  setup.py  streamlit_app.py
.streamlit/: config.toml
newsie/: __init__.py  ai.py  assets.py  constants.py  definitions.py  resources.py  utils.py
